--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
                 </p>
               </div>
               <div class="field column is-three-fifths is-offset-one-fifth">
-                <p class="control">
-                  <button class="button is-warning" id="citySearch">Search</button>
-                </p>
+                  <a href="#section2" class="button is-warning" id="citySearch">Search</a>
               </div>
           </div>
         </div>
@@ -56,7 +54,7 @@
 
 <!-- api content  -->
   <section class="hero is-warning is-medium">
-    <div class="hero-body"> 
+    <div class="hero-body" id="section2"><a href="section2"></a>
       <div class="container">
         <div class="tile is-ancestor">
           <!-- brewery tile -->
