--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <!-- bulma -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- fontawesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <!-- moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- smooth scroll-->
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="assets/style.css">
     <!-- google fonts -->
@@ -54,11 +57,11 @@
 
 <!-- api content  -->
   <section class="hero is-warning is-medium">
-    <div class="hero-body" id="section2"><a href="section2"></a>
+    <div class="hero-body">
       <div class="container">
-        <div class="tile is-ancestor">
+        <div class="tile is-ancestor"id="section2"><a href="section2"></a>
           <!-- brewery tile -->
-          <div class="tile is-parent">
+          <div class="tile is-parent second">
             <article class="tile is-child box">
               <p class="title tileTitles">Breweries In Your City</p>
               <div class="content" id="breweryList">
@@ -115,11 +118,13 @@
 
 <!-- typing main title w/ typed.js -->
 <script>
+  $(document).ready(function(){
 var typed = new Typed('#typed',{
                     stringsElement: '#typed-strings',
                     backSpeed: 10,
                     typeSpeed: 100
                   });
+});
 </script>
 </body>
 </html>
